--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,14 +74,14 @@ https://www.tooplate.com/view/2097-pop
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-users fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text">Our Team</span>
+                                            <span class="tm-nav-text"> Lovely Gyeongjun</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
                                         <div class="product__description">
                                             <div class="p-sm-4 p-2">
                                                 <div class="row mb-3">
                                                     <div class="col-12">
-                                                        <h2 class="tm-page-title">Background of Our Team</h2>        
+                                                        <h2 class="tm-page-title">Background of Lovely Gyeonjun</h2>        
                                                     </div>
                                                 </div>
                                                 <div class="row tm-reverse-sm">
