--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,7 +74,7 @@ https://www.tooplate.com/view/2097-pop
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-users fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text"> KAWI Gyeongjunzzang</span>
+                                            <span class="tm-nav-text"> Z1ZON Gyeongjun</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
                                         <div class="product__description">
