--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,7 @@ https://www.tooplate.com/view/2097-pop
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-md-col-xl-6 mb-md-0 mb-sm-4 mb-4 tm-site-header-col">
                         <div class="tm-site-header">
-                            <h1 class="mb-4">POP design</h1>
+                            <h1 class="mb-4">Gyeongjun Ji</h1>
                             <img src="img/underline.png" class="img-fluid mb-4">
                             <p>New HTML Template with pop up pages and use this layout for your website</p>        
                         </div>                        
@@ -44,13 +44,13 @@ https://www.tooplate.com/view/2097-pop
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-home fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text">Welcome</span>
+                                            <span class="tm-nav-text">Home</span>
                                             <div class="product__bg"></div>        
                                         </div>                                    
                                         <div class="product__description">
                                             <div class="row mb-3">
                                                 <div class="col-12">
-                                                    <h2 class="tm-page-title">Welcome to Pop Design</h2>        
+                                                    <h2 class="tm-page-title">Seoul</h2>        
                                                 </div>
                                             </div>                                        
                                             <div class="row">
@@ -74,7 +74,7 @@ https://www.tooplate.com/view/2097-pop
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-users fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text"> Z1ZON Gyeongjun</span>
+                                            <span class="tm-nav-text"> Sync</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
                                         <div class="product__description">
